Closed Bug 1640601 Opened 6 years ago Closed 6 years ago

Assert when toggling `display` back from none in ::file-chooser-button.

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

Details

Attachments

(1 file)

MOZ_ASSERT(aChild->GetProperty(nsGkAtoms::restylableAnonymousNode)) (Someone passed native anonymous content directly into frame construction.  Stop doing that!)

We were dealing with it correctly when switching display from e.g. block
to inline, or such. But we were not dealing with it when the node was
undisplayed.

Handle it properly, and free one frame bit while at it. We can't really
do this for ManualNAC (the editor resizers) because they request a
reframe explicitly.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a74484fbd880 Also reframe the closest non-anonymous root when switching anonymous content from display: none to something else. r=mats
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/23763 for changes under testing/web-platform/tests
Upstream web-platform-tests status checks passed, PR will merge once commit reaches central.
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Upstream PR merged by moz-wptsync-bot
Duplicate of this bug: 1465511
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: